# blog-resources

./: .gitignore
building-a-portable-fastapi-backend-for-aws-lambda-and-ecs-using-terraform/infra/: 1-providers.tf  2-outputs.tf  4-locals.tf  5-vpc.tf  6-alb.tf  7-lambda.tf  8-ecs.tf
building-a-portable-fastapi-backend-for-aws-lambda-and-ecs-using-terraform/test-api/: main.py  pyproject.toml
building-backend-apis-with-fastapi-on-aws-lambda/: README.md
building-backend-apis-with-fastapi-on-aws-lambda/api-lambda/: pyproject.toml
building-backend-apis-with-fastapi-on-aws-lambda/api-lambda/src/api_lambda/: __init__.py  main.py
building-backend-apis-with-fastapi-on-aws-lambda/api-lambda/src/api_lambda/v1/: items.py
building-backend-apis-with-fastapi-on-aws-lambda/api-lambda/tests/: test_api.py
building-backend-apis-with-fastapi-on-aws-lambda/infra/: infra.sam.yaml
building-backend-apis-with-fastapi-on-aws-lambda/layers/mylib/: Makefile  pyproject.toml
building-backend-apis-with-fastapi-on-aws-lambda/layers/mylib/src/mylib/: db.py
building-ha-kubernetes-cluster-on-proxmox-with-terraform-ansible-and-talos/ansible/: install.yaml
building-virtualization-server-with-proxmox/: ansible.cfg  proxmox-bootstrap.yaml  proxmox.yaml
building-virtualization-server-with-proxmox/ansible-inventory/: hosts.yaml
building-websites-at-scale-with-aws-cloudfront-and-hugo/: README.md
deploying-ha-kubernetes-cluster-on-proxmox-with-terraform-and-talos-os/: README.md
installing-cilium-and-multus-on-talos/: README.md
installing-cilium-and-multus-on-talos/cilium/: Makefile  (+2 more)
(+64 files in other folders)
