[project]
name = "mylib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Luka Krapic", email = "luka.krapic@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.37.33",
    "fastapi>=0.115.12",
    "mangum>=0.19.0",
    "pydantic-settings>=2.8.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
